--- a/roll_objects/roll_frame/jvm/pom.xml
+++ b/roll_objects/roll_frame/jvm/pom.xml
@@ -53,6 +53,16 @@
             <groupId>org.apache.arrow</groupId>
             <artifactId>arrow-memory</artifactId>
             <version>${arrow.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-buffer</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-common</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -79,7 +89,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.39.Final</version>
+            <version>4.1.27.Final</version>
         </dependency>
     </dependencies>
 
